LarkMasterMCPの機能を拡張し、101のツールを追加しました。
- .env.exampleファイルを更新し、Larkアプリの認証情報とオプション設定を明確にしました。
- CLAUDE.mdを修正し、LarkMasterMCPの機能比較を更新しました。
- CLIインターフェースにロギング機能を追加し、エラーハンドリングを強化しました。
- LarkClientに新しいAPI呼び出しを追加し、Bitableおよびメッセージング関連のツールを拡充しました。
- サーバーの初期化時にツールの数をログに記録するようにしました。

これにより、LarkMasterMCPの全体的な機能性と使いやすさが向上しました。

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,35 @@
-# Lark App Credentials
-# Get these from https://open.feishu.cn/app
+# LarkMasterMCP Configuration
+# 
+# To get started:
+# 1. Copy this file to .env: cp .env.example .env
+# 2. Get credentials from Lark Open Platform
+# 3. Fill in your app credentials below
+
+# === Required: Lark App Credentials ===
+# Get these from:
+# - China: https://open.feishu.cn/app  
+# - International: https://open.larksuite.com/app
+
 LARK_APP_ID=your_app_id_here
 LARK_APP_SECRET=your_app_secret_here
 
-# Optional: Custom base URL (for international version)
+# === Optional Configuration ===
+
+# For international Lark Suite (uncomment if needed)
 # LARK_BASE_URL=https://open.larksuite.com/open-apis
+
+# Logging level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# === Permissions Required ===
+# Your Lark app needs these permissions:
+# - im:message (Send messages)
+# - im:message.group_at_msg (Group messages) 
+# - contact:user.id (User info)
+# - calendar:calendar (Calendar access)
+# - drive:drive (File operations)
+# - task:task (Task management)
+# - approval:approval (Approvals)
+# - wiki:wiki (Wiki access)
+# - attendance:attendance (Attendance records)
+# - vc:meeting (Video meetings)
